--- a/PresentationLayer/Views/JobOffer/Details.cshtml
+++ b/PresentationLayer/Views/JobOffer/Details.cshtml
@@ -69,6 +69,7 @@
     </dl>
 </div>
 <p>
+    @Html.ActionLink("Create Application", "Create", "JobApplication", new { jobOfferId = Model.Id }, null) |
     @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
     @Html.ActionLink("Back to List", "Index")
 </p>
