Change application status in presentation layer

--- a/PresentationLayer/Views/JobApplication/Details.cshtml
+++ b/PresentationLayer/Views/JobApplication/Details.cshtml
@@ -67,6 +67,8 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
+    @Html.ActionLink("Accept", "AcceptApplication", new {id = Model.Id}) |
+    @Html.ActionLink("Reject", "RejectApplication", new { id = Model.Id }) |
+    @Html.ActionLink("Close", "CloseApplication", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
