--- a/PresentationLayer/Views/JobOffer/Index.cshtml
+++ b/PresentationLayer/Views/JobOffer/Index.cshtml
@@ -47,9 +47,10 @@
             @String.Join(", ", item.Skills.ToArray())
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Create Application", "Create", "JobApplication", new { jobOfferId = item.Id }, null) |
+            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+            @Html.ActionLink("Delete", "Delete", new {id = item.Id})
         </td>
     </tr>
 }
