--- a/PresentationLayer/Views/JobApplication/Index.cshtml
+++ b/PresentationLayer/Views/JobApplication/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<BusinessLayer.DataTransferObjects.JobApplicationDto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Applications";
 }
 
-<h2>Index</h2>
+<h2>Applications</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Index", "JobOffer")
 </p>
 <table class="table">
     <tr>
