--- a/PresentationLayer/Views/Employer/Details.cshtml
+++ b/PresentationLayer/Views/Employer/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Employer</h4>
-    <hr />
+    <hr/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Email)
@@ -45,6 +45,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Jobs", "OffersOfEmployer", "JobOffer", new {id = Model.Id}, null) | 
+    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
     @Html.ActionLink("Back to List", "Index")
 </p>
