--- a/PresentationLayer/Views/Employer/Index.cshtml
+++ b/PresentationLayer/Views/Employer/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BusinessLayer.DataTransferObjects.EmployerDto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Employers";
 }
 
 <h2>Index</h2>
@@ -41,9 +41,10 @@
             @Html.DisplayFor(modelItem => item.PhoneNumber)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Jobs", "OffersOfEmployer", "JobOffer", new { id = item.Id },null) |
+            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+            @Html.ActionLink("Delete", "Delete", new {id = item.Id})
         </td>
     </tr>
 }
