--- a/PresentationLayer/Views/SkillTag/Details.cshtml
+++ b/PresentationLayer/Views/SkillTag/Details.cshtml
@@ -21,6 +21,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Show related jobs", "OffersBySkill", "JobOffer", new { id = Model.Id }, null) |
+    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
     @Html.ActionLink("Back to List", "Index")
 </p>
