--- a/PresentationLayer/Views/JobOffer/Edit.cshtml
+++ b/PresentationLayer/Views/JobOffer/Edit.cshtml
@@ -56,13 +56,18 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.JobOfferCreateDto.QuestionTexts, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.JobOfferCreateDto.QuestionTexts, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.JobOfferCreateDto.QuestionTexts, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @{
+            for (int i = 0; i < Model.JobOfferCreateDto.Questions.Count; i++)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(model => model.JobOfferCreateDto.Questions, htmlAttributes: new {@class = "control-label col-md-2"})
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.JobOfferCreateDto.Questions[i].Text, new {htmlAttributes = new {@class = "form-control"}})
+                        @Html.ValidationMessageFor(model => model.JobOfferCreateDto.Questions[i].Text, "", new {@class = "text-danger"})
+                    </div>
+                </div>
+            }
+        }
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
