--- a/PresentationLayer/Views/User/Details.cshtml
+++ b/PresentationLayer/Views/User/Details.cshtml
@@ -69,6 +69,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Job applications", "ApplicationsByUser", "JobApplication", new { id = Model.Id }, null) |
+    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
     @Html.ActionLink("Back to List", "Index")
 </p>
