--- a/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -26,8 +26,40 @@
                     <li>@Html.ActionLink("Skills", "Index", "SkillTag")</li>
                     <li>@Html.ActionLink("Users", "Index", "User")</li>
                     <li>@Html.ActionLink("Employers", "Index", "Employer")</li>
+                    @if (User.IsInRole("Employer"))
+                    {
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                </ul>
+                <ul class="nav navbar-nav  navbar-right">
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li class="dropdown pull-right">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user grey"></span> @User.Identity.Name.Split('@')[0] <b class="caret grey"></b></a>
+                            <ul class="dropdown-menu">
+                                <li class="dropdown-header">Account management</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                            </ul>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="dropdown pull-right">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user grey"></span><b class="caret grey"></b></a>
+                            <ul class="dropdown-menu">
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Log in", "Login", "Account")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Register as user", "RegisterUser", "Account")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Register as employer", "RegisterEmployer", "Account")</li>
+                            </ul>
+                        </li>
+
+                    }
                 </ul>
             </div>
         </div>
@@ -36,7 +68,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Created by Martin Styk and Ondrej Oravcok</p>
         </footer>
     </div>
 
