--- a/PresentationLayer/Views/JobApplication/Create.cshtml
+++ b/PresentationLayer/Views/JobApplication/Create.cshtml
@@ -37,7 +37,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Applicant.FirstName, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Applicant.FirstName, new {htmlAttributes = new {@class = "form-control"}})
+                 @if (Request.IsAuthenticated && User.IsInRole("User"))
+                 {
+                     @Html.TextBoxFor(model => model.Applicant.FirstName, new { @readonly = true , @class = "form-control" })
+                 }
+                 else
+                 {
+                     @Html.EditorFor(model => model.Applicant.FirstName, new {htmlAttributes = new {@class = "form-control"}})
+
+                 }
                 @Html.ValidationMessageFor(model => model.Applicant.FirstName, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -45,7 +53,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Applicant.LastName, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Applicant.LastName, new {htmlAttributes = new {@class = "form-control"}})
+                @if (Request.IsAuthenticated && User.IsInRole("User"))
+                {
+                    @Html.TextBoxFor(model => model.Applicant.LastName, new { @readonly = true , @class = "form-control" })
+                }
+                else
+                {
+                    @Html.EditorFor(model => model.Applicant.LastName, new {htmlAttributes = new {@class = "form-control"}})
+
+                }
                 @Html.ValidationMessageFor(model => model.Applicant.LastName, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -53,7 +69,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Applicant.MiddleName, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Applicant.MiddleName, new {htmlAttributes = new {@class = "form-control"}})
+                @if (Request.IsAuthenticated && User.IsInRole("User"))
+                {
+                    @Html.TextBoxFor(model => model.Applicant.MiddleName, new { @readonly = true , @class = "form-control" })
+                }
+                else
+                {
+                    @Html.EditorFor(model => model.Applicant.MiddleName, new {htmlAttributes = new {@class = "form-control"}})
+                }
                 @Html.ValidationMessageFor(model => model.Applicant.MiddleName, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -61,7 +84,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Applicant.Email, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Applicant.Email, new {htmlAttributes = new {@class = "form-control"}})
+                @if (Request.IsAuthenticated && User.IsInRole("User"))
+                {
+                    @Html.TextBoxFor(model => model.Applicant.Email, new { @readonly = true , @class = "form-control" })
+                }
+                else
+                {
+                    @Html.EditorFor(model => model.Applicant.Email, new {htmlAttributes = new {@class = "form-control"}})
+                }
                 @Html.ValidationMessageFor(model => model.Applicant.Email, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -69,7 +99,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Applicant.Education, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Applicant.Education, new {htmlAttributes = new {@class = "form-control"}})
+                @if (Request.IsAuthenticated && User.IsInRole("User"))
+                {
+                    @Html.TextBoxFor(model => model.Applicant.Education, new { @readonly = true , @class = "form-control" })
+                }
+                else
+                {
+                    @Html.EditorFor(model => model.Applicant.Education, new {htmlAttributes = new {@class = "form-control"}})
+                }
                 @Html.ValidationMessageFor(model => model.Applicant.Education, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -77,7 +114,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Applicant.PhoneNumber, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Applicant.PhoneNumber, new {htmlAttributes = new {@class = "form-control"}})
+                @if (Request.IsAuthenticated && User.IsInRole("User"))
+                {
+                    @Html.TextBoxFor(model => model.Applicant.PhoneNumber, new { @readonly = true , @class = "form-control" })
+                }
+                else
+                {
+                    @Html.EditorFor(model => model.Applicant.PhoneNumber, new {htmlAttributes = new {@class = "form-control"}})
+                }
                 @Html.ValidationMessageFor(model => model.Applicant.PhoneNumber, "", new {@class = "text-danger"})
             </div>
         </div>
