--- a/PresentationLayer/Views/JobOffer/Index.cshtml
+++ b/PresentationLayer/Views/JobOffer/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h2>Jobs</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (User.IsInRole("Employer"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -29,30 +32,46 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Employer.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @String.Join(", ", item.Skills.ToArray())
-        </td>
-        <td>
-            @Html.ActionLink("Create Application", "Create", "JobApplication", new { jobOfferId = item.Id }, null) |
-            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-            @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Employer.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @String.Join(", ", item.Skills.ToArray())
+            </td>
+            <td>
+                @if (!User.IsInRole("Emplyer") && !User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Create Application", "Create", "JobApplication", new {jobOfferId = item.Id}, null)
+                    @:|
+                }
+                @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+
+                @if (User.IsInRole("Employer") && User.Identity.Name.Equals(item.Employer.Email))
+                {
+                    @Html.ActionLink("Show Applications", "ApplicationsByJobOffer", "JobApplication", new {id = item.Id}, null)
+                    @:|
+                    @Html.ActionLink("Edit", "Edit", new {id = item.Id})
+                    @:|
+                }
+
+                @if ((User.IsInRole("Employer") && User.Identity.Name.Equals(item.Employer.Email)) || User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                }
+            </td>
+        </tr>
+    }
 
 </table>
