--- a/PresentationLayer/Views/SkillTag/Index.cshtml
+++ b/PresentationLayer/Views/SkillTag/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model IEnumerable<BusinessLayer.DataTransferObjects.SkillTagDto>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (Request.IsAuthenticated && User.IsInRole("Employer"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -11,18 +14,16 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Show related jobs", "OffersBySkill", "JobOffer", new { id = item.Id }, null) |
-            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-            @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Show related jobs", "OffersBySkill", "JobOffer", new {id = item.Id}, null)
+            </td>
+        </tr>
+    }
 
 </table>
