--- a/PresentationLayer/Views/JobApplication/Index.cshtml
+++ b/PresentationLayer/Views/JobApplication/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Applications</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Index", "JobOffer")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -41,11 +38,14 @@
             @Html.DisplayFor(modelItem => item.JobApplicationStatus)
         </td>
         <td>
-            @Html.ActionLink("Accept", "AcceptApplication", new { id=item.Id }) |
-            @Html.ActionLink("Reject", "RejectApplication", new { id=item.Id }) |
-            @Html.ActionLink("Close", "CloseApplication", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @if (User.IsInRole("Employer"))
+            {
+                @Html.ActionLink("Accept", "AcceptApplication", new {id = item.Id}) @:|
+                @Html.ActionLink("Reject", "RejectApplication", new {id = item.Id}) @:|
+                @Html.ActionLink("Close", "CloseApplication", new {id = item.Id}) @:|
+            }
+           
+            @Html.ActionLink("Details", "Details", new {id = item.Id})
         </td>
     </tr>
 }
