--- a/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -29,14 +29,14 @@
                 {
                     <li>@Html.ActionLink("Job Offers", "Index", "JobOffer")</li>
                 }
-                <li>@Html.ActionLink("Job Applications", "Index", "JobApplication")</li>
+                
+                @if (User.IsInRole("User"))
+                {
+                    <li>@Html.ActionLink("My job applications", "ApplicationsOfCurrentUser", "JobApplication")</li>
+                }
                 <li>@Html.ActionLink("Skills", "Index", "SkillTag")</li>
                 <li>@Html.ActionLink("Users", "Index", "User")</li>
                 <li>@Html.ActionLink("Employers", "Index", "Employer")</li>
-                @if (User.IsInRole("Employer"))
-                {
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                }
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
