--- a/PresentationLayer/Views/Employer/Index.cshtml
+++ b/PresentationLayer/Views/Employer/Index.cshtml
@@ -39,8 +39,12 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                @Html.ActionLink("Jobs", "OffersOfEmployer", "JobOffer", new {id = item.Id}, null) |
-                @Html.ActionLink("Details", "Details", new {id = item.Id})
+                <a class="btn btn-success btn-sm" href="@Url.Action("OffersOfEmployer", "JobOffer", new {id = item.Id}, null)">
+                    See Jobs<i class="glyphicon glyphicon-new-window ml-2" style="margin-left: 0.5rem"></i>
+                </a> |
+                <a class="btn btn-primary btn-sm" href="@Url.Action("Details", new {id = item.Id})">
+                    Details<i class="glyphicon glyphicon-tag" style="margin-left: 0.5rem"></i>
+                </a>
             </td>
         </tr>
     }
