--- a/PresentationLayer/Views/JobOffer/Index.cshtml
+++ b/PresentationLayer/Views/JobOffer/Index.cshtml
@@ -26,9 +26,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Skills)
-        </th>
         <th></th>
     </tr>
 
@@ -37,6 +34,10 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+                @foreach (var skill in item.Skills.ToArray())
+                {
+                    <span class="badge">@skill</span>
+                }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Employer.Name)
@@ -48,15 +49,15 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @String.Join(", ", item.Skills.ToArray())
-            </td>
-            <td>
                 @if (!User.IsInRole("Employer"))
                 {
-                    @Html.ActionLink("Create Application", "Create", "JobApplication", new {jobOfferId = item.Id}, null)
-                    @:|
+                    <a class="btn btn-warning btn-sm" href="@Url.Action("Create", "JobApplication", new {jobOfferId = item.Id}, null)">
+                        Apply<i class="glyphicon glyphicon-hand-right" style="margin-left: 0.5rem"></i>
+                    </a>
                 }
-                @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                <a class="btn btn-primary btn-sm" href="@Url.Action("Details", new {id = item.Id})">
+                    Details<i class="glyphicon glyphicon-tag" style="margin-left: 0.5rem"></i>
+                </a>
 
                 @if (User.IsInRole("Employer") && User.Identity.Name.Equals(item.Employer.Email))
                 {
