--- a/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -29,13 +29,16 @@
                 {
                     <li>@Html.ActionLink("Job Offers", "Index", "JobOffer")</li>
                 }
-                
+
                 @if (User.IsInRole("User"))
                 {
                     <li>@Html.ActionLink("My job applications", "ApplicationsOfCurrentUser", "JobApplication")</li>
                 }
                 <li>@Html.ActionLink("Skills", "Index", "SkillTag")</li>
-                <li>@Html.ActionLink("Users", "Index", "User")</li>
+                @if (Request.IsAuthenticated && User.IsInRole("Employer"))
+                {
+                    <li>@Html.ActionLink("Users", "Index", "User")</li>
+                }
                 <li>@Html.ActionLink("Employers", "Index", "Employer")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
